elofgren: Use CSS padding and some JS hacks to make the AJAX action buttons fit at the bottom of the screen. Now that tabsets are no longer wrapped in a div (to reduce wasted space under tags), there was no extra space for them. See: http://support.silverstripe.com/gsoc/ticket/59 (merged from branches/gsoc)
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/trunk@42089 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -397,7 +397,7 @@ input.loading {
 	border: 1px #AAA solid;
 	border-top: none;
 	position: relative;
-	top: -3px;
+	top: 0px;
 	margin: 0;
 	padding: 10px;
 	/*width: 98%;*/
@@ -878,4 +878,10 @@ div.CommentFilter {
     position: relative;
     top: -15px;
     left: 35px;
+}
+/* Makes room for AJAX Action buttons */
+#right {
+	padding-bottom: 20px;
+	/* HACK: any IE */
+	padding-bottom: expression('35px');
 }
